doc/releases/0.96.0/jaylynbarbee-checklist.md
## Telemetry Prologue
 * Before starting your tests, go to General settings, enable "Diagnostic data" and "Enable viewing" and restart PowerToys.

## Telemetry Epilogue
 * After finishing your tests, go to General settings, press Diagnostic data viewer and check if you have xml files for the utilities you've tested and if it looks like the events in those xml files were generated by the actions you did with the utilities you've tested.

## Always on Top
 - [x] 1. Pin/unpin a window, verify it's topmost/not topmost.
 - [x] 2. Pin/unpin a window, verify the border appeared/disappeared.
 - [ ] 3. Switch virtual desktop, verify border doesn't show up on another desktop.
      --> Stays there for a bit and then goes away once you start clicking...
 - [x] 4. Minimize and maximize pinned window, verify the border looks as usual.
 - [x] 5. Change border color and thickness.
 - [x] 6. Verify if sound is played according to the sound setting.
 - [x] 7. Exclude app, try to pin it.
 - [x] 8. Exclude already pinned app, verify it was unpinned.
 - [ ] 9. Try to pin the app in the Game Mode.

## Awake
 - [x] 1. Try out the features and see if they work, no list at this time.

## Crop And Lock
 * Thumbnail mode
   - [x] 1. Test with win32 app (notepad)
   - [x] 2. Test with packaged app (calculator/weather)
   
 * Reparent mode (there are known issues where reparent mode doesn't work for some apps)
   - [x] 3. Test with win32 app
   - [ ] 4. Test with packaged app 
      --> Giving me issues (Tested with calculator and weather app)

## [FancyZones Editor](tests-checklist-template-fancyzones-section.md)

- [x] 1. Open editor from the settings
      - TestMethod("FancyZones.Setting")
- [x] 2. Open editor with a shortcut
- [x] 3. Create a new layout (grid and canvas)
      - TestMethod("FancyZonesEditor.Basic.CreateWithCustomName")
      - TestMethod("FancyZonesEditor.Basic.CreateGrid")
      - TestMethod("FancyZonesEditor.Basic.CreateCanvas")
      - TestMethod("FancyZonesEditor.Basic.CancelGridCreation")
      - TestMethod("FancyZonesEditor.Basic.CancelCanvasCreation")
- [x] 4. Duplicate a template and a custom layout
      - TestMethod("FancyZonesEditor.Basic.CopyTemplate_FromEditLayoutWindow")
      - TestMethod("FancyZonesEditor.Basic.CopyTemplate_FromContextMenu")
      - TestMethod("FancyZonesEditor.Basic.CopyCustomLayout_FromEditLayoutWindow")
      - TestMethod("FancyZonesEditor.Basic.CopyCustomLayout_FromContextMenu")
      - TestMethod("FancyZonesEditor.Basic.CopyCustomLayout_Hotkey")
- [x] 5. Delete layout
      - TestMethod("FancyZonesEditor.Basic.DeleteNotAppliedLayout")
      - TestMethod("FancyZonesEditor.Basic.DeleteAppliedLayout")
      - TestMethod("FancyZonesEditor.Basic.CancelDeletion")
      - TestMethod("FancyZonesEditor.Basic.DeleteFromContextMenu")
      - TestMethod("FancyZonesEditor.Basic.DeleteDefaultLayout")
      - TestMethod("FancyZonesEditor.Basic.DeleteLayoutWithHotkey")
- [x] 6. Edit templates (number of zones, spacing, distance to highlight adjacent zones). Verify after reopening the editor that saved settings are kept the same.
      - TestMethod("FancyZonesEditor.Basic.ZoneNumber_Cancel")
      - TestMethod("FancyZonesEditor.Basic.HighlightDistance_Initialize")
      - TestMethod("FancyZonesEditor.Basic.HighlightDistance_Save")
      - TestMethod("FancyZonesEditor.Basic.HighlightDistance_Cancel")
      - TestMethod("FancyZonesEditor.Basic.SpaceAroundZones_Initialize")
      - TestMethod("FancyZonesEditor.Basic.SpaceAroundZones_Slider_Save")
      - TestMethod("FancyZonesEditor.Basic.SpaceAroundZones_Slider_Cancel")
      - TestMethod("FancyZonesEditor.Basic.SpaceAroundZones_Toggle_Save")
      - TestMethod("FancyZonesEditor.Basic.SpaceAroundZones_Toggle_Cancel")
- [x] 7. Edit canvas layout: zones size and position, create or delete zones.
      - TestMethod("FancyZonesEditor.Basic.OpenEditMode")
      - TestMethod("FancyZonesEditor.Basic.OpenEditModeFromContextMenu")
      - TestMethod("FancyZonesEditor.Basic.Canvas_AddZone_Save")
      - TestMethod("FancyZonesEditor.Basic.Canvas_AddZone_Cancel")
      - TestMethod("FancyZonesEditor.Basic.Canvas_DeleteZone_Save")
      - TestMethod("FancyZonesEditor.Basic.Canvas_DeleteZone_Cancel")
      - TestMethod("FancyZonesEditor.Basic.Canvas_MoveZone_Save")
      - TestMethod("FancyZonesEditor.Basic.Canvas_MoveZone_Cancel")
      - TestMethod("FancyZonesEditor.Basic.Canvas_ResizeZone_Save")
      - TestMethod("FancyZonesEditor.Basic.Canvas_ResizeZone_Cancel")
- [x] 8. Edit grid layout: split, merge, resize zones.
      - TestMethod("FancyZonesEditor.Basic.Grid_SplitZone_Save")
      - TestMethod("FancyZonesEditor.Basic.Grid_SplitZone_Cancel")
      - TestMethod("FancyZonesEditor.Basic.Grid_MergeZones_Save")
      - TestMethod("FancyZonesEditor.Basic.Grid_MergeZones_Cancel")
      - TestMethod("FancyZonesEditor.Basic.Grid_MoveSplitter_Save")
      - TestMethod("FancyZonesEditor.Basic.Grid_MoveSplitter_Cancel")
- [x] 9. Check `Save and apply` and `Cancel` buttons behavior after editing.
      - All Save and Cancel button have this test.
- [x] 10. Assign a layout to each monitor.
      - TestMethod("FancyZonesEditor.Basic.ApplyLayoutsOnEachMonitor")
      - TestMethod("FancyZonesEditor.Basic.ApplyTemplateWithDifferentParametersOnEachMonitor")
- [ ] 11. Assign keys to quickly switch layouts (custom layouts only), `Win + Ctrl + Alt + number`.
      - TestMethod("FancyZonesEditor.Basic.HotKey_Initialize")
      - TestMethod("FancyZonesEditor.Basic.HotKey_Assign_Save")
      - TestMethod("FancyZonesEditor.Basic.HotKey_Assign_Cancel")
      - TestMethod("FancyZonesEditor.Basic.HotKey_Assign_AllPossibleValues")
      - TestMethod("FancyZonesEditor.Basic.HotKey_Reset_Save")
      - TestMethod("FancyZonesEditor.Basic.HotKey_Reset_Cancel")
- [ ] 12. Assign horizontal and vertical default layouts
      - TestMethod("FancyZonesEditor.Basic.Default_Initialize")
      - TestMethod("FancyZonesEditor.Basic.Default_Assign_Cancel")
      - TestMethod("FancyZonesEditor.Basic.Default_Assign_Save")
- [ ] 13. Test duplicate layout focus
   * Select any layout X in 'Templates' or 'Custom' section by click left mouse button
   * Mouse right button click on any layout Y in 'Templates' or 'Custom' sections
   * Duplicate it by clicking 'Create custom layout' (Templates section) or 'Duplicate' in 'Custom' section
   * Expect the layout Y is duplicated
      - TestMethod("FancyZonesEditor.Basic.CopyTemplate_DefaultLayout")
      - TestMethod("FancyZonesEditor.Basic.CopyCustomLayout_DefaultLayout")

## [FancyZones](tests-checklist-template-fancyzones-section.md)

### Appearance
- [x] 1. Change colors, opacity and `Show zone number` options. Verify they're applied.

### Excluded apps
- [x] 1. Exclude some apps, verify that they're not applicable to a zone.

### Dragging
- [x] 1. `Hold Shift key to activate zones while dragging` on, `Use a non-primary mouse button to toggle zone activation` off. Start dragging a window, then press shift. Zones are shown when dragging a window with shift pressed, hidden when you released shift or snapped zone.
        - TestMethod("FancyZones.Settings.TestShowZonesOnShiftDuringDrag")
- [x] 2. `Hold Shift key to activate zones while dragging` on, `Use a non-primary mouse button to toggle zone activation` off. Press shift first, then start dragging a window. Zones are shown when dragging a window with shift pressed, hidden when you released shift or snapped zone.
        - TestMethod("FancyZones.Settings.TestShowZonesOnDragDuringShift")
- [x] 3.  `Hold Shift key to activate zones while dragging` off, `Use a non-primary mouse button to toggle zone activation` on. Zones are shown immediately when dragging a window and hidden when you click a non-primary mouse button or press shift.
        - TestMethod("FancyZones.Settings.TestToggleZonesWithNonPrimaryMouseClick")
- [x] 4. `Hold Shift key to activate zones while dragging` off, `Use a non-primary mouse button to toggle zone activation` off. Zones are shown immediately when dragging a window, hidden when you press shift.
        - TestMethod("FancyZones.Settings.TestShowZonesWhenShiftAndMouseOff")
- [x] 5. `Hold Shift key to activate zones while dragging` on, `Use a non-primary mouse button to toggle zone activation` on. Zones aren't shown immediately, only when shift is pressed or when a non-primary mouse click changes the state.  
        - TestMethod("FancyZones.Settings.TestShowZonesWhenShiftAndMouseOn")
- [x] 6. `Show zones on all monitor while dragging a window` - turn on,off, verify behavior.
- [ ] 7. Create a canvas layout with overlapping zones, check zone activation behavior with all `When multiple zones overlap` options
- [x] 8. `Make dragged window transparent` - turn on, off, verify behavior
        - TestMethod("FancyZones.Settings.TestMakeDraggedWindowTransparentOn")
        - TestMethod("FancyZones.Settings.TestMakeDraggedWindowTransparentOff")

### Snapping
Disable FZ and clear `app-zone-history.json` before starting. FancyZones should be disabled, otherwise, it'll save cached values back to the file.

- [x] 1. Snap a window to a zone by dragging, verify `app-zone-history.json` contains info about the window position on the corresponding work area.
- [x] 2. Snap a window to a zone by a keyboard shortcut, verify `app-zone-history.json` contains info about the window position on the corresponding work area.
- [x] 3. Snap a window to another monitor, verify `app-zone-history.json` contains positions about zones on both monitors.
- [x] 4. Snap a window to several zones, verify zone numbers in the json file are correct.
- [x] 5. Snap a window to a zone, unsnap it, verify this app was removed from the json file.
- [x] 6. Snap the same window to a zone on two different monitors or virtual desktops. Then unsnap from one of them, verify that info about unsnapped zone was removed from `app-zone-history.json`. Verify info about the second monitor/virtual desktop is kept.  
- [ ] 7. Enable `Restore the original size of windows when unsnapping`, snap window, unsnap window, verify the window changed its size to original.
- [ ] 8. Disable `Restore the original size of windows when unsnapping`, snap window, unsnap window, verify window size wasn't changed.
- [ ] 9. Disable `Restore the original size of windows when unsnapping`, snap window, enable `Restore the original size of windows when unsnapping`, unsnap window, verify window size wasn't changed. 
- [ ] 10. Launch PT in user mode, try to assign a window with administrator privileges to a zone. Verify the notification is shown.
- [ ] 11. Launch PT in administrator mode, assign a window with administrator privileges.
- [ ] 12. Enable `Allow child windows snapping`, drag any child window (e.g. Solution Explorer, Notepad++ search window), verify it can be snapped to a zone.
- [ ] 13. Disable `Allow child windows snapping`, drag any child window (e.g. Solution Explorer, Notepad++ search window), verify it can't be snapped to a zone.
* Open `Task view` , right-click on the window, check the `Show this window on all desktops` or the `Show windows from this app on all desktops` option to turn it on.
    - [ ] 14. Turn Show this window on all desktops on, verify you can snap this window to a zone.
    - [ ] 15. Turn Show windows from this app on all desktops on, verify you can snap this window to a zone.

### Snapped window behavior
- [ ] 1. `Keep windows in their zones when the screen resolution changes` on, snap a window to a zone, change the screen resolution or scaling, verify window changed its size and position.
- [ ] 2. `Keep windows in their zones when the screen resolution changes` on, snap a window to a zone on the secondary monitor. Disconnect the secondary monitor (the window will be moved to the primary monitor). Reconnect the secondary monitor. Verify the window returned to its zone. 
- [ ] 3. `Keep windows in their zones when the screen resolution changes` off, snap a window to a zone, change the screen resolution or scaling, verify window didn't change its size and position.

Enable `During zone layout changes, windows assigned to a zone will match new size/positions` and prepare layouts with 1 and 3 zones where zone size/positions are different.
- [ ] 4. Snap a window to zone 1, change the layout, verify window changed its size/position.
- [ ] 5. Snap a window to zone 3, change the layout, verify window didn't change its size/position because another layout doesn't have a zone with this zone number.
- [ ] 6. Snap a window to zones 1-2, change the layout, verify window changed its size/position to fit zone 1.
- [ ] 7. Snap a window to zones 1-2, change the layout (the window will be snapped to zone 1), then return back to the previous layout, verify the window snapped to 1-2 zones.
- [ ] 8. Disable `During zone layout changes, windows assigned to a zone will match new size/positions`, snap window to zone 1, change layout, verify window didn't change its size/position

Enable `Move newly created windows to their last known zone`.
- [ ] 9. Snap a window to the primary monitor, close and reopen the window. Verify it's snapped to its zone.
- [ ] 10. Snap a window to zones on the primary and secondary monitors. Close and reopen the app. Verify it's snapped to the zone on the active monitor.
- [ ] 11. Snap a window to the secondary monitor (use a different app or unsnap the window from the zone on the primary monitor), close and reopen the window. Verify it's snapped to its zone. 
- [ ] 12. Snap a window, turn off FancyZones, move that window, turn FZ on. Verify window returned to its zone.
- [ ] 13. Move unsnapped window to a secondary monitor, switch virtual desktop and return back. Verify window didn't change its position and size.
- [ ] 14. Snap a window, then resize it (it's still snapped, but doesn't fit the zone). Switch the virtual desktop and return back, verify window didn't change its size.
- [ ] 15. Snap a popup window (e.g. Teams), close and reopen it, verify the window appears in its zone.
- [ ] 16. Snap Visual Studio Code to a zone, and open any menu. Verify the menu is where it's supposed to be and not on the top left corner of the zone.

Enable `Move newly created windows to the current active monitor`.
- [ ] 17. Open a window that wasn't snapped anywhere, verify it's opened on the active monitor.
- [ ] 18. Open a window that was snapped on the current virtual desktop and current monitor, verify it's opened in its zone.
- [ ] 19. Open a window that was snapped on the current virtual desktop and another monitor, verify it's opened on the active monitor.
- [ ] 20. Open a window that was snapped on another virtual desktop, verify it's opened on the active monitor.

### Switch between windows in the current zone
Enable `Switch between windows in the current zone` (default shortcut is `Win + PgUp/PgDown`)
- [ ] 1. Snap several windows to one zone, verify switching works.
        - TestMethod("TestSwitchWindow")
- [ ] 2. Snap several windows to one zone, switch virtual desktop, return back, verify window switching works.
        - TestMethod("FancyZones.Settings.TestSwitchAfterDesktopChange")
- [ ] 3. Disable `Switch between windows in the current zone`, verify switching doesn't work.
        - TestMethod("FancyZones.Settings.TestSwitchShortCutDisable")

### Override Windows Snap
- [ ] 1. Disable `Override Windows Snap`, verify it's disabled.

Enable `Override Windows Snap`.
Select Move windows based on `Zone index`.
- [ ] 2. Open the previously not snapped window, press `Win`+`LeftArrow` / `Win`+`RightArrow`, verify it's snapped to a first/last zone.
- [ ] 3. Verify `Win`+`LeftArrow` moves the window to a zone with the previous index.
- [ ] 4. Verify `Win`+`RightArrow` moves the window to a zone with the next index.
- [ ] 5. Verify `Win`+`ArrowUp` and `Win`+`ArrowDown` work as usual.

- [ ] 6. `Move windows between zones across all monitors` disabled. Verify `Win`+`LeftArrow` doesn't move the window to any zone when the window is in the first zone.
- [ ] 7. `Move windows between zones across all monitors` disabled. Verify `Win`+`RightArrow` doesn't move the window to any zone when the window is in the last zone.

One monitor:
- [ ] 8. `Move windows between zones across all monitors` enabled. Verify `Win`+`LeftArrow` and `Win`+`RightArrow` cycles the window between zones.
- [ ] 9. `Move windows between zones across all monitors` disabled. Verify `Win`+`LeftArrow` and `Win`+`RightArrow` cycles the window between zones.

Two and more monitors:
- [ ] 10. `Move windows between zones across all monitors` enabled. Verify `Win`+`LeftArrow` cycles window position moving it from the first zone on the current monitor to the last zone of the left (or rightmost, if the current monitor is leftmost) monitor.
- [ ] 11. `Move windows between zones across all monitors` enabled. Verify `Win`+`RightArrow` cycles window position moving it from the last zone on the current monitor to the first zone of the right (or leftmost, if the current monitor is rightmost) monitor.

Select Move windows based on `Relative position`.
- [ ] 12. Open the previously not snapped window, press `Win`+`Arrow`, verify it's snapped.
- [ ] 13. Extend the window using `Ctrl`+`Alt`+`Win`+`Arrow`. Verify the window is snapped to all zones.
- [ ] 14. Extend the window using `Ctrl`+`Alt`+`Win`+`Arrow` and return it back using the opposite arrow. Verify it could be reverted while you hold `Ctrl`+`Alt`+`Win`.

- [ ] 15. `Move windows between zones across all monitors` disabled. Verify `Win`+`LeftArrow` cycles the window position to the left (from the leftmost zone moves to the rightmost in the same row) within one monitor.
- [ ] 16. `Move windows between zones across all monitors` disabled. Verify `Win`+`RightArrow` cycles the window position to the right within one monitor.
- [ ] 17. `Move windows between zones across all monitors` disabled. Verify `Win`+`UpArrow` cycles the window position up within one monitor.
- [ ] 18. `Move windows between zones across all monitors` disabled. Verify `Win`+`DownArrow` cycles the window position down within one monitor.

- [ ] 19. `Move windows between zones across all monitors` enabled. Verify `Win`+`LeftArrow` cycles the window position to the left (from the leftmost zone moves to the rightmost in the same row) within all monitors.
- [ ] 20. `Move windows between zones across all monitors` enabled. Verify `Win`+`RightArrow` cycles the window position to the right within all monitors.
- [ ] 21. `Move windows between zones across all monitors` enabled. Verify `Win`+`UpArrow` cycles the window position up within all monitors.
- [ ] 22. `Move windows between zones across all monitors` enabled. Verify `Win`+`DownArrow` cycles the window position down within all monitors.

### Layout apply
Enable `Enable quick layout switch`, assign numbers to custom layouts.
- [ ] 1. Switch with `Win` + `Ctrl` + `Alt` + `key`.
      - TestMethod("FancyZones.Settings.TestApplyHotKey")
- [ ] 2. Switch with just a key while dragging a window.
      - TestMethod("FancyZones.Settings.TestDragShiftHotKey")
- [ ] 3. Turn `Flash zones when switching layout` on/off, verify it's flashing/not flashing after pressing the shortcut.
      - TestMethod("FancyZones.Settings.HotKeyWindowFlashTest")
- [ ] 4. Disable `Enable quick layout switch`, verify shortcuts don't work.
      - TestMethod("FancyZones.Settings.TestDisableApplyHotKey")
- [ ] 5. Disable spacing on any grid layout, verify that there is no space between zones while dragging a window.
      - This feature is not available in the current release version.
- [ ] 6. Create a new virtual desktop, verify that there are the same layouts as applied to the previous virtual desktop.
      - TestMethod("FancyZones.Settings.TestVirtualDesktopLayout")
- [ ] 7. After creating a virtual desktop apply another layout or edit the applied one. Verify that the other virtual desktop layout wasn't changed.
      - TestMethod("FancyZones.Settings.TestVirtualDesktopLayoutExt")
- [ ] 8. Delete an applied custom layout in the Editor, verify that there is no layout applied instead of it.
      - TestMethod("FancyZones.Settings.TestDeleteCustomLayoutBehavior")
- [ ] 9. Apply a grid layout, change the screen resolution or scaling, verify that the assigned layout fits the screen. NOTE: canvas layout could not fit the screen if it was created on a monitor with a different resolution.
      - TestMethod("FancyZones.Settings.TestCreateGridLayoutChangeMonitorSetting")

### Layout reset
* Test layout resetting.
Before testing 
   * Remove all virtual desktops 
   * Remove `CurrentVirtualDesktop` from `\HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\SessionInfo\1\VirtualDesktops` 
   * Remove `VirtualDesktopIDs` from `\HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\VirtualDesktops`

- [ ] 1. Test screen locking
   * Set custom layouts on each monitor
   * Lock screen / unplug monitor / plug monitor
   * Verify that layouts weren't reset to defaults
   
- [ ] 2. Test restart
   * Set custom layouts on each monitor
   * Restart the computer
   * Verify that layouts weren't reset to defaults

- [ ] 3. Test applying default layouts on reset
   * Set default horizontal and vertical layouts
   * Delete `applied-layouts.json`
   * Verify that selected default layout is applied according to configuration

### Span zones across monitors
- [ ] 1. Switch between `Allow zones to span across monitors` on and off. Verify that layouts are applied correctly in both cases.

Repeat the previous subsections steps after enabling `Allow zones to span across monitors`
- [ ] 2. Dragging
- [ ] 3. Snapping
- [ ] 4. Snapped window behavior
- [ ] 5. Switch between windows in the current zone
- [ ] 6. Override Windows Snap
- [ ] 7. Layout apply
- [ ] 8. Layout reset

## [Workspaces](tests-checklist-template-workspaces-section.md)
* Settings
   - [x] 1. Launch the Editor by clicking the button on the settings page.
   - [x] 2. Launch the Editor from quick access.
   - [x] 3. Launch the Editor by the Activation shortcut.
   - [x] 4. Disable the module and verify it won't launch by the shortcut.

* Snapshot tool: try with elevated and non-elevated PT
   * Open non-packaged apps, e.g., VisualStudio, VisualStudioCode.
   * Open packaged apps, e.g., Notepad, Settings.
   * Run any app as an administrator.
   * Minimize any app.
   * Click `Create Workspace`.
   * Open any other window.
   * Click `Capture`
   - [x] 5. Verify Editor shows all opened windows (the elevated window will be captured if PT is also elevated).
   - [x] 6. Verify windows are in the correct positions.
   - [x] 7. Verify elevated app has the `Admin` box checked (if captured).

* Editor
   - [x] 8. Verify that the new Workspace appears in the list after capturing.
   - [x] 9. Verify that the new Workspace doesn't appear after canceling the Capture.
   - [x] 10. Verify `Search` filters Workspaces (by workspace name or app name).
   - [x] 11. Verify `SortBy` works.
   - [x] 12. Verify `SortBy` keeps its value when you close and open the editor again.
   - [x] 13. Verify `Remove` removes the Workspace from the list.
   - [x] 14. Verify `Edit` opens the Workspace editing page.
   - [x] 15. Verify clicking at the Workspace opens the Workspace editing page.
   
   * Editing page
   - [x] 16. `Remove` an app and verify it disappeared on the preview.
   - [x] 17. `Remove` and `Add back` an app, verify it's returned back to the preview.
   - [x] 18. Set an app minimized, check the preview.
   - [x] 19. Set an app maximized, check the preview.
   - [x] 20. Check `Launch as admin` for the app where it's available.
   - [x] 21. Add CLI args, e.g. path to the PowerToys.sln file for VisualStudio.
   - [x] 22. Manually change the position for the app, check the preview.
   - [x] 23. Change the Workspace name.
   - [x] 24. Verify `Save` and `Cancel` work as expected. 
   - [x] 25. Change anything in the project, click at the `Workspaces` on the top of the page, and verify you returned to the main page without saving any changes.
   - [x] 26. Check `Create desktop shortcut`, save the project, verify the shortcut appears on the desktop. 
   - [x] 27. Verify that `Create desktop shortcut` is checked when the shortcut is on the desktop and unchecked when there is no shortcut on the desktop. 
   - [x] 28. Click `Launch and Edit`, wait for the apps to launch, click `Capture`, verify opened apps are added to the project.

* Launcher
   - [x] 29. Click `Launch` in the editor, verify the Workspace apps launching.
   - [x] 30. Launch Workspace by a shortcut, verify the Workspace apps launching.
   - [x] 31. Verify a window with launching progress is shown while apps are launching and presents the correct launching state (launching, launched, not launched) for every app.
   - [x] 32. Click `Cancel launch`, verify launching is stopped at the current state (opened apps will stay opened), and the window is closed.
   - [x] 33. Click `Dismiss` and verify apps keep launching, but the LauncherUI window is closed.
   
* To verify that the launcher works correctly with different apps, try to capture and launch:   
   - [ ] 34. Non-packaged app, e.g., VisualStudio code
      - [ ] 35. As admin (didn't capture??)
      - [ ] 36. With CLI args 
    - [x] 37. Packaged app, e.g. Terminal
      - [x] 38. As admin
      - [x] 39. With CLI args

* Try to launch the Workspace with a different setup
   - [ ] 40. Create a Workspace with one monitor connected, connect the second monitor, launch the Workspace, verify apps are opened on the first one, as captured.
   - [ ] 41. Create a Workspace with two monitors connected, disconnect a monitor, verify apps are opened on the remaining one.

## [Mouse Without Borders](tests-checklist-template-mouse-without-borders-section.md)
 * Install PowerToys on two PCs in the same local network:
   - [x] 1. Verify that PowerToys is properly installed on both PCs.
   
 * Setup Connection:
   - [x] 2. Open MWB's settings on the first PC and click the "New Key" button. Verify that a new security key is generated.
   - [x] 3. Copy the generated security key and paste it in the corresponding input field in the settings of MWB on the second PC. Also enter the name of the first PC in the required field.
   - [x] 4. Press "Connect" and verify that the machine layout now includes two PC tiles, each displaying their respective PC names.
   
 * Verify Connection Status:
   - [x] 5. Ensure that the border of the remote PC turns green, indicating a successful connection.
   - [x] 6. Enter an incorrect security key and verify that the border of the remote PC turns red, indicating a failed connection.
   
 * Test Remote Mouse/Keyboard Control:
   - [x] 7. With the PCs connected, test the mouse/keyboard control from one PC to another. Verify that the mouse/keyboard inputs are correctly registered on the other PC.
   - [x] 8. Test remote mouse/keyboard control across all four PCs, if available. Verify that inputs are correctly registered on each connected PC when the mouse is active there.
   
 * Test Remote Control with Elevated Apps:
   - [x] 9. Open an elevated app on one of the PCs. Verify that without "Use Service" enabled, PowerToys does not control the elevated app.
   - [ ] 10. Enable "Use Service" in MWB's settings. Verify that PowerToys can now control the elevated app remotely. Verify that MWB processes are running as LocalSystem, while the MWB helper process is running non-elevated.
   - [ ] 11. Toggle "Use Service" again, verify that each time you do that, the MWB processes are restarted.
   - [ ] 12. Run PowerToys elevated on one of the machines, verify that you can control elevated apps remotely now on that machine.

* Test Module Enable Status:
   - [x] 13. For all combinations of "Use Service"/"Run PowerToys as admin", try enabling/disabling MWB module and verify that it's indeed being toggled using task manager.
   
 * Test Disconnection/Reconnection:
   - [x] 14. Disconnect one of the PCs from network. Verify that the machine layout updates to reflect the disconnection. 
   - [x] 15. Do the same, but now by exiting PowerToys.
   - [x] 16. Start PowerToys again, verify that the PCs are reconnected.
  ** For the above I have to press refresh connections to see the border. **
  
 * Test Various Local Network Conditions:
   - [ ] 17. Test MWB performance under various network conditions (e.g., low bandwidth, high latency). Verify that the tool maintains a stable connection and functions correctly.

 * Clipboard Sharing:
   - [x] 18. Copy some text on one PC and verify that the same text can be pasted on another PC.
   - [x] 19. Use the screenshot key and Win+Shift+S to take a screenshot on one PC and verify that the screenshot can be pasted on another PC.
   - [x] 20. Copy a file in Windows Explorer and verify that the file can be pasted on another PC. Make sure the file size is below 100MB.
   - [x] 21. Try to copy multiple files and directories and verify that it's not possible (only the first selected file is being copied).
 
 * Drag and Drop:
   - [ ] 22. Drag a file from Windows Explorer on one PC, cross the screen border onto another PC, and release it there. Verify that the file is copied to the other PC. Make sure the file size is below 100MB.
   - [x] 23. While dragging the file, verify that a corresponding icon is displayed under the mouse cursor.
   - [x] 24. Without moving the mouse from one PC to the target PC, press CTRL+ALT+F1/2/3/4 hotkey to switch to the target PC directly and verify that file sharing/dropping is not working.

 * Lock and Unlock with "Use Service" Enabled:
   - [x] 25. Enable "Use Service" in MWB's settings.
   - [x] 26. Lock a remote PC using Win+L, move the mouse to it remotely, and try to unlock it. Verify that you can unlock the remote PC.
   - [x] 27. Disable "Use Service" in MWB's settings, lock the remote PC, move the mouse to it remotely, and try to unlock it. Verify that you can't unlock the remote PC.

 * Test Settings:
   - [x] 28. Change the rest of available settings on MWB page and verify that each setting works as described.

## [Mouse Utils](tests-checklist-template-mouse-utils-section.md)

Find My Mouse:
  * Enable FindMyMouse. Then, without moving your mouse:
    - [ ] 1. Press Left Ctrl twice and verify the overlay appears.
          - TestMethod("MouseUtils.FindMyMouse.EnableFindMyMouse")
    - [ ] 2. Press any other key and verify the overlay disappears.
          - TestMethod("MouseUtils.FindMyMouse.EnableFindMyMouse")
    - [ ] 3. Press Left Ctrl twice and verify the overlay appears.
          - TestMethod("MouseUtils.FindMyMouse.EnableFindMyMouse")
    - [ ] 4. Press a mouse button and verify the overlay disappears.
          - TestMethod("MouseUtils.FindMyMouse.EnableFindMyMouse")
  * Disable FindMyMouse.
    - [ ] 5. Verify the overlay no longer appears when you press Left Ctrl twice.
          - TestMethod("MouseUtils.FindMyMouse.DisableFindMyMouse")
          - TestMethod("MouseUtils.FindMyMouse.DisableFindMyMouse2")
  * Enable FindMyMouse. Then, without moving your mouse:
    - [ ] 6. Press Left Ctrl twice and verify the overlay appears.
          - TestMethod("MouseUtils.FindMyMouse.DisableFindMyMouse3")
  * Enable the "Do not activate on game mode" option. Start playing a game that uses CG native full screen.
    - [ ] 7. Verify the overlay no longer appears when you press Left Ctrl twice.
  * Disable the "Do not activate on game mode" option. Start playing the same game.
    - [ ] 8. Verify the overlay appears when you press Left Ctrl twice. (though it'll likely minimize the game)
  * Test the different settings and verify they apply:
    - [ ] 9. Overlay opacity
    - [ ] 10. Background color
          - TestMethod("MouseUtils.FindMyMouse.FindMyMouseDifferentSettings")
    - [ ] 11. Spotlight color
          - TestMethod("MouseUtils.FindMyMouse.FindMyMouseDifferentSettings")
    - [ ] 12. Spotlight radius
          - TestMethod("MouseUtils.FindMyMouse.FindMyMouseDifferentSettings")
    - [ ] 13. Spotlight initial zoom (1x vs 9x will show the difference)
    - [ ] 14. Animation duration
    - [ ] 15. Change activation method to shake and activate by shaking your mouse pointer
    - [ ] 16. Excluded apps

Mouse Highlighter:
  * Enable Mouse Highlighter. Then:
    - [ ] 17. Press the activation shortcut and press left and right click somewhere, verifying the hightlights are applied.
          - TestMethod("MouseUtils.MouseHighlighter.EnableMouseHighlighter")
    - [ ] 18. With left mouse button pressed, drag the mouse and verify the hightlight is dragged with the pointer.
          - TestMethod("MouseUtils.MouseHighlighter.EnableMouseHighlighter")
    - [ ] 19. With right mouse button pressed, drag the mouse and verify the hightlight is dragged with the pointer.
          - TestMethod("MouseUtils.MouseHighlighter.EnableMouseHighlighter")
    - [ ] 20. Press the activation shortcut again and verify no highlights appear when the mouse buttons are clicked.
          - TestMethod("MouseUtils.MouseHighlighter.EnableMouseHighlighter")
    - [ ] 21. Disable Mouse Highlighter and verify that the module is not activated when you press the activation shortcut.
          - TestMethod("MouseUtils.MouseHighlighter.EnableMouseHighlighter")
  * Test the different settings and verify they apply:
    - [ ] 22. Change activation shortcut and test it
          - TestMethod("MouseUtils.MouseHighlighter.MouseHighlighterDifferentSettings")
    - [ ] 23. Left button highlight color
          - TestMethod("MouseUtils.MouseHighlighter.MouseHighlighterDifferentSettings")
    - [ ] 24. Right button highlight color
          - TestMethod("MouseUtils.MouseHighlighter.MouseHighlighterDifferentSettings")
    - [ ] 25. Opacity
    - [ ] 26. Radius
    - [ ] 27. Fade delay
    - [ ] 28. Fade duration

Mouse Pointer Crosshairs:
  * Enable Mouse Pointer Crosshairs. Then:
    - [ ] 29. Press the activation shortcut and verify the crosshairs appear, and that they follow the mouse around.
          - TestMethod("MouseUtils.MousePointerCrosshairs.EnableMousePointerCrosshairs")
    - [ ] 30. Press the activation shortcut again and verify the crosshairs disappear.
          - TestMethod("MouseUtils.MousePointerCrosshairs.EnableMousePointerCrosshairs")
    - [ ] 31. Disable Mouse Pointer Crosshairs and verify that the module is not activated when you press the activation shortcut.
          - TestMethod("MouseUtils.MousePointerCrosshairs.EnableMousePointerCrosshairs")
  * Test the different settings and verify they apply:
    - [ ] 32. Change activation shortcut and test it
          - TestMethod("MouseUtils.MousePointerCrosshairs.MousePointerCrosshairsDifferentSettings")
    - [ ] 33. Crosshairs color
          - TestMethod("MouseUtils.MousePointerCrosshairs.MousePointerCrosshairsDifferentSettings")
    - [ ] 34. Crosshairs opacity
    - [ ] 35. Crosshairs center radius
    - [ ] 36. Crosshairs thickness
    - [ ] 37. Crosshairs border color
    - [ ] 38. Crosshairs border size

Mouse Jump:
  * Enable Mouse Jump. Then:
    - [ ] 39. Press the activation shortcut and verify the screens preview appears.
          - TestMethod("MouseUtils.MouseJump.EnableMouseJump")
          - TestMethod("MouseUtils.MouseJump.EnableMouseJump2")
    - [ ] 40. Change activation shortcut and verify that new shortcut triggers Mouse Jump.
          - TestMethod("MouseUtils.MouseJump.EnableMouseJump")
          - TestMethod("MouseUtils.MouseJump.EnableMouseJump3")
    - [ ] 41. Click around the screen preview and ensure that mouse cursor jumped to clicked location.
          - TestMethod("MouseUtils.MouseJump.EnableMouseJump")
          - TestMethod("MouseUtils.MouseJump.EnableMouseJump2")
    - [ ] 42. Reorder screens in Display settings and confirm that Mouse Jump reflects the change and still works correctly.
    - [ ] 43. Change scaling of screens and confirm that Mouse Jump still works correctly.
    - [ ] 44. Unplug additional monitors and confirm that Mouse Jump still works correctly.
    - [ ] 45. Disable Mouse Jump and verify that the module is not activated when you press the activation shortcut.
          - TestMethod("MouseUtils.MouseJump.EnableMouseJump")
          - TestMethod("MouseUtils.MouseJump.EnableMouseJump2")

## [Light Switch](../tests-checklist-template.md#light-switch)
UI Validation:
- [x] Module turns service off and on appropriately
- [x] Modes are able to be switched and the appropriate UI shows for each
- [x] Update the offsets reflect in the timeline chart
- [x] Updating the time reflects in the timeline chart
- [x] You are able to fetch using geo location (and sun information is accurate)
- [x] You are able to manually enter coordinates (and sun information is accurate)

Service Validation:
- [x] Ensure that pressing the shortcut key triggers an update
- [x] Ensure that pressing the shortcut key triggers a block in the schedule (Should see logs Skipping schedule due to manual override at the next minute after activation)
- [x] Ensure that changing windows settings triggers a manual override (at the next minute)
- [x] Ensure that the manual override is cleared once a boundary is met (Use shortcut, set transition using Fixed Hours to 2 mins in the future, ensure the first minute doesn't flip back and the second minute the override is cleared)
- [x] Ensure that the schedule resumes following the boundary clearance.
- [x] Ensure the shortcut still works when the mode is set to "Off"
- [x] Ensure the schedule resumes as expected once turned back on.
- Hibernation test
   - [x] Set your schedule to change themes in the next 2 minutes.
   - [x] Send your machine to hibernate shutdown /h
   - [x] Wake your machine after your theme should have changed and ensure Light Switch catches itself up
   - [x] Repeat steps above but with a manual override triggered prior to the theme change.Ensure manual override is flushed and schedule resumes.
- [x] Stop and restart the module. Ensure it behaves as expected. No reset settings, etc.

## Shortcut Guide
 * Run PowerToys as user:
   - [ ] 1. Verify `Win + Shift + /` opens the guide
   - [ ] 2. Change the hotkey to a different shortcut (e.g. `Win + /`) and verify it works
   - [ ] 3. Set Shortcut Guide to start with a Windows key press and verify it works.
 * Restore the `Win + Shift + /` hotkey.
   - [ ] 4. Open the guide and close it pressing `Esc`
   - [ ] 5. Open the guide and close it pressing and releasing the `Win` key
 * With PowerToys running as a user, open an elevated app and keep it on foreground:
   - [ ] 6. Verify `Win + Shift + /` opens the guide
   - [ ] 7. Verify some of the shortcuts shown in the guide work and the guide is closed when pressed

## [ZoomIt](tests-checklist-template-zoomit-section.md)

 * Enable ZoomIt in Settings.
   - [ ] 1. Verify ZoomIt tray icon appears in the tray icons, and that when you left-click or right-click, it just shows the 4 action entries: "Break Timer", "Draw", "Zoom" and "Record".
   - [ ] 2. Turn the "Show tray icon" option off and verify the tray icon is gone.
   - [ ] 3. Turn the "Show tray icon" option on and verify the tray icon is back.
 * Test the base modes through a shortcuts:
   - [ ] 4. Press the Zoom Toggle Hotkey and verify ZoomIt zooms in on the mouse. You can exit Zoom by pressing Escape or the Hotkey again.
   - [ ] 5. Press the Live Zoom Toggle Hotkey and verify ZoomIt zooms in on the mouse, while the screen still updates instead of showing a still image. You can exit Live Zoom by pressing the Hotkey again.
   - [ ] 6. Press the Draw without Zoom Hotkey and verify you can draw. You can leave this mode by pressing the Escape.
   - [ ] 7. Select a text file as the Input file for Demo Type, focus notepad and press the Demo Type hotkey. It should start typing the text file. You can exit Demo Type by pressing Escape.
   - [ ] 8. Press the Start Break Timer Hotkey and verify it starts the Timer. You can exit by pressing Escape.
   - [ ] 9. Press the Record Toggle Hotkey to start recording a screen. Press the Record Toggle Hotkey again to exit the mode and save the recording to a file.
   - [ ] 10. Press the Snip Toggle Hotkey to take a snip of the screen. Paste it to Paint to verify a snip was taken.
 * Test some Settings to verify the types are being passed correctly to ZoomIt:
   - [ ] 11. Change the "Animate zoom in and zoom out" setting and activate Zoom mode to verify it applies.
   - [ ] 12. Change the "Specify the initial level of magnification when zooming in" and activate Zoom mode to verify it applies.
   - [ ] 13. Change the Type Font to another font. Enter Break mode to quickly verify the font changed.
   - [ ] 14. Change the Demo Type typing speed and verify the change applies.
   - [ ] 15. Change the timer Opacity for Break mode and verify that the change applies.
   - [ ] 16. Change the timer Position for Break mode and verify that the change applies.
   - [ ] 17. Select a Background Image file as background for Break mode and verify that the change applies.
   - [ ] 18. Turn on "Play Sound on Expiration", select a sound file, aset the timer to 1 minute, activate the Break Mode and verify the sound plays after 1 minute. (Alarm1.wav from "C:\Windows\Media" should be long enough to notice)
   - [ ] 19. Open the Microphone combo box in the Record section and verify it lists your microphones.
 * Test the tray icon actions:
   - [ ] 20. Verify pressing "Break Timer" enters Break mode.
   - [ ] 21. Verify pressing "Draw" enters Draw mode.
   - [ ] 22. Verify pressing "Zoom" enters Zoom mode.
   - [ ] 23. Verify pressing "Record" enters Record mode.
